--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/assets/css/owl.css">
     <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
-    <script src="/assets/js/custom/index.js defer"></script>
+    <script src="/assets/js/custom/index.js" defer></script>
 <!--
 
 TemplateMo 579 Cyborg Gaming
